--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 project(rover VERSION 1.0)
 
+enable_testing()
+
 add_subdirectory(platform)
 add_subdirectory(service)
 add_subdirectory(plugins/system)
