--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -14,6 +14,9 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 
 add_executable(service ${SRCS_G})
 
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/service.properties DESTINATION ${EXECUTABLE_OUTPUT_PATH})
+
 target_link_libraries(service PUBLIC
         platform
         ${CMAKE_THREAD_LIBS_INIT}
@@ -23,4 +26,5 @@ target_link_libraries(service PUBLIC
         -lPocoJSON
 )
 
-SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
+
+
