--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -13,13 +13,15 @@ include_directories(${PROJECT_SOURCE_DIR}/../platform/src)
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
 add_executable(service ${SRCS_G})
+add_library(service_lib ${SRCS_G})
+
+add_subdirectory(testsuite)
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/service.properties DESTINATION ${EXECUTABLE_OUTPUT_PATH})
 
 target_link_libraries(service PUBLIC
         platform
-        ${CMAKE_THREAD_LIBS_INIT}
         -lPocoUtil
         -lPocoFoundation
         -lPocoNet
