--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 file(GLOB SRCS_G
         src/*.cpp
+        src/rpc/*.cpp
         src/handlers/*.cpp
         src/handlers/json-rpc/*.cpp
         )
