--- a/service/www/package.json
+++ b/service/www/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "components": "^0.1.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-dates": "^20.2.2",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
+    "use-query-params": "^0.3.3",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "styleguide": "styleguidist server",
@@ -32,16 +40,9 @@
     "@storybook/react": "^5.1.8",
     "react-styleguidist": "^9.1.7"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
