--- a/plugins/system/CMakeLists.txt
+++ b/plugins/system/CMakeLists.txt
@@ -3,12 +3,18 @@ project(system VERSION 1.0)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-file(GLOB SRCS_G
-        src/*.cpp
-        )
+file(GLOB SRCS_G src/*.cpp)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/../platform/src)
+include_directories(
+        /usr/local/include
+        ${PROJECT_SOURCE_DIR}/src
+        ${PROJECT_SOURCE_DIR}/../platform/src
+)
+
+link_directories(
+        /usr/local/lib
+)
+
 
 add_library(system SHARED ${SRCS_G})
 add_subdirectory(testsuite)
