--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
 project(platform VERSION 1.0)
 
+if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+    conan_basic_setup(NO_OUTPUT_DIRS)
+else()
+    message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
+endif()
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-file(GLOB SRCS_G
-        src/json/*.cpp
-        )
+file(GLOB SRCS_G src/json/*.cpp src/plugin/*.cpp src/rpc/*.cpp)
 
 include_directories(
         /usr/local/include
@@ -16,16 +21,11 @@ link_directories(
         /usr/local/lib
 )
 
+set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/)
+message(test ${LIBRARY_OUTPUT_DIRECTORY})
+
 add_library(platform SHARED ${SRCS_G})
 
 add_subdirectory(testsuite)
 
-target_link_libraries(platform PUBLIC
-        ${CMAKE_THREAD_LIBS_INIT}
-        -lPocoUtil
-        -lPocoFoundation
-        -lPocoNet
-        -lPocoJSON
-        )
-
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib)
+target_link_libraries(platform ${CONAN_LIBS})
