Module & fix build

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -21,10 +21,10 @@ link_directories(
         /usr/local/lib
 )
 
-set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/)
+# set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/)
 message(test ${LIBRARY_OUTPUT_DIRECTORY})
 
-add_library(platform SHARED ${SRCS_G})
+add_library(platform STATIC ${SRCS_G})
 
 add_subdirectory(testsuite)
 
