--- a/service/testsuite/CMakeLists.txt
+++ b/service/testsuite/CMakeLists.txt
@@ -5,13 +5,16 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 file(GLOB TEST_SRCS src/*.cpp)
 
+include_directories(
+        ${PROJECT_SOURCE_DIR}/src
+        ${PROJECT_SOURCE_DIR}/../src
+        ${PROJECT_SOURCE_DIR}/../platform/src
+)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/../src)
-include_directories(${PROJECT_SOURCE_DIR}/../platform/src)
+enable_testing()
 
-add_executable(service_testsuite ${TEST_SRCS} )
+add_executable(service_testsuite ${TEST_SRCS})
 
-target_link_libraries(service_testsuite PUBLIC service_lib platform cppunit)
+target_link_libraries(service_testsuite PUBLIC service_lib platform ${CONAN_LIBS})
 
-add_test(NAME service WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMAND service_testsuite -all)
+add_test(NAME service_testsuite WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMAND service_testsuite)
