build cleanup add incubator project

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
+
 project(platform VERSION 1.0)
 
-if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    conan_basic_setup(NO_OUTPUT_DIRS)
-else()
-    message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
-endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
@@ -17,11 +12,7 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/src
 )
 
-link_directories(
-        /usr/local/lib
-)
-
-message(test ${LIBRARY_OUTPUT_DIRECTORY})
+set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib)
 
 add_library(platform STATIC ${SRCS_G})
 
