--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 file(GLOB SRCS_G
         src/*.cpp
         src/http/*.cpp
+        src/properties/*.cpp
         )
 
 file(GLOB LIB_SRCS_G
