application, logging, properties based on boost-1.70

--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB SRCS_G
         src/*.cpp
         src/http/*.cpp
         src/properties/*.cpp
+        src/subsystem/*.cpp
         )
 
 file(GLOB LIB_SRCS_G
@@ -14,7 +15,6 @@ file(GLOB LIB_SRCS_G
         )
 
 include_directories(
-        /usr/local/include
         ${PROJECT_SOURCE_DIR}/src
         ${PROJECT_SOURCE_DIR}/../platform/src
 )
@@ -24,6 +24,12 @@ add_executable(incubator ${SRCS_G})
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
 
 target_link_libraries(incubator ${CONAN_LIBS})
+
+set(PROPERTIES_DIR ${EXECUTABLE_OUTPUT_PATH}/../etc)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/settings.json DESTINATION ${PROPERTIES_DIR})
+
+file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/../var/logs)
+file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/../var/tmp)
 
 
 
