--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -3,9 +3,14 @@ cmake_minimum_required(VERSION 3.0)
 project(platform VERSION 1.0)
 
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
-file(GLOB SRCS_G src/json/*.cpp src/plugin/*.cpp src/rpc/*.cpp)
+file(GLOB SRCS_G
+        src/json/*.cpp
+        src/plugin/*.cpp
+        src/rpc/*.cpp
+        src/rpc/json/*.cpp
+)
 
 include_directories(
         /usr/local/include
