--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -6,6 +6,7 @@ project(platform VERSION 1.0)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
 file(GLOB SRCS_G
+        src/*.cpp
         src/json/*.cpp
         src/plugin/*.cpp
         src/rpc/*.cpp
