--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -5,15 +5,25 @@ project(platform VERSION 1.0)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
+if(UNIX AND NOT APPLE)
+    message("Build Unix")
+    set(${SRC_PLATFORM} src/platform-linux/*.cpp)
+elseif(APPLE)
+    message("Build Apple")
+    set(${SRC_PLATFORM} src/platform-mac-os/*.cpp)
+endif()
+
 file(GLOB SRCS_G
         src/*.cpp
         src/json/*.cpp
         src/plugin/*.cpp
         src/rpc/*.cpp
         src/rpc/json/*.cpp
+        ${SRC_PLATFORM}
 )
 
 include_directories(
+        /usr/include
         /usr/local/include
         ${PROJECT_SOURCE_DIR}/src
 )
