--- a/service/www/package.json
+++ b/service/www/package.json
@@ -42,6 +42,7 @@
     "@storybook/react": "^5.1.8",
     "react-styleguidist": "^9.1.7"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": [
     ">2%",
     "not dead",
