--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if (APPLE)
     endif()
 else()
     message("Unix build")
-    find_package(Boost COMPONENTS date_time filesystem system log thread)
+    find_package(Boost 1.67.0 REQUIRED COMPONENTS date_time filesystem system log thread unit_test_framework)
     if(Boost_FOUND)
         set(MAIN_LIBS ${Boost_LIBRARIES} )
         set(PLATFORM_SPECIFIC_LIBS pthread)
@@ -23,8 +23,6 @@ else()
         message("Please install boot  >= 1.67")
     endif()
 endif()
-
-message(": " ${MAIN_LIBS})
 
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_INSTALL_NAME_DIR "")
