--- a/service/www/package.json
+++ b/service/www/package.json
@@ -6,9 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@open-rpc/mock-server": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "components": "^0.1.0",
+    "global": "^4.4.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
@@ -30,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "mock-server": "open-rpc-mock-server"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,10 +45,10 @@
     "@storybook/react": "^5.1.8",
     "react-styleguidist": "^9.1.7"
   },
-  "proxy": "http://localhost:8080",
   "browserslist": [
     ">2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:3333"
 }
