first component, env, mock-server for dev

--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -39,6 +39,8 @@ set(PLUGINS_DIR ${EXECUTABLE_OUTPUT_PATH}/../lib)
 file(MAKE_DIRECTORY ${PROPERTIES_DIR})
 file(MAKE_DIRECTORY ${PLUGINS_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/settings.json DESTINATION ${PROPERTIES_DIR})
+
+message("Copy FE")
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/www/build/ DESTINATION ${EXECUTABLE_OUTPUT_PATH}/../var/www)
 
 target_link_libraries(service platform dl)
