--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,12 @@ if (APPLE)
     if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
         include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
         conan_basic_setup(NO_OUTPUT_DIRS)
-        set (MAIN_LIBS ${CONAN_LIBS})
+
+        find_library(IOKIT_LIBRARY IOKit)
+        find_library(CORE_LIBRARY CoreFoundation)
+
+        set (MAIN_LIBS ${CONAN_LIBS} ${IOKIT_LIBRARY} ${CORE_LIBRARY})
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
     else()
         message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
     endif()
@@ -15,10 +20,8 @@ else()
     message("Unix build")
     find_package(Boost 1.67.0 REQUIRED COMPONENTS date_time filesystem system log thread unit_test_framework)
     if(Boost_FOUND)
-        set(MAIN_LIBS ${Boost_LIBRARIES} )
-        set(PLATFORM_SPECIFIC_LIBS pthread)
+        set(MAIN_LIBS ${Boost_LIBRARIES} pthread)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_LOG_DYN_LINK")
-
     else()
         message("Please install boot  >= 1.67")
     endif()
@@ -29,6 +32,8 @@ set(CMAKE_INSTALL_NAME_DIR "")
 
 enable_testing()
 
+#add_subdirectory(lib/json)
+#add_subdirectory(lib/serial)
 add_subdirectory(platform)
 add_subdirectory(plugins/system)
 add_subdirectory(service)
