--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 
 project(service VERSION 1.0)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden -DBOOST_LOG_DYN_LINK")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
+message("CMAKE_CXX_FLAGS" ${CMAKE_CXX_FLAGS})
 
 file(GLOB SRCS_G
         src/*.cpp
@@ -12,6 +11,7 @@ file(GLOB SRCS_G
         src/rpc/*.cpp
         src/properties/*.cpp
         src/subsystem/*.cpp
+        src/serial/*.cpp
 )
 
 file(GLOB LIB_SRCS_G
@@ -26,6 +26,10 @@ include_directories(
         /usr/local/include
         ${PROJECT_SOURCE_DIR}/src
         ${PROJECT_SOURCE_DIR}/../platform/src
+)
+
+link_directories(
+        /usr/local/lib
 )
 
 add_executable(service ${SRCS_G})
@@ -43,7 +47,7 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/settings.json DESTINATION ${PROPERTIES_DIR
 message("Copy FE")
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/www/build/ DESTINATION ${EXECUTABLE_OUTPUT_PATH}/../var/www)
 
-target_link_libraries(service platform dl)
+target_link_libraries(service platform dl serial)
 
 
 
