--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.0)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 project(service VERSION 1.0)
-
-message("CMAKE_CXX_FLAGS" ${CMAKE_CXX_FLAGS})
 
 file(GLOB SRCS_G
         src/*.cpp
