--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,19 @@
 cmake_minimum_required(VERSION 3.12)
 project(rover VERSION 1.0)
 
-if (EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    conan_basic_setup(NO_OUTPUT_DIRS)
-
-    if (APPLE)
-        message("Apple build")
-        find_library(IOKIT_LIBRARY IOKit)
-        find_library(CORE_LIBRARY CoreFoundation)
-    else()
-        message("Unix build")
-    endif()
-    set (MAIN_LIBS ${CONAN_LIBS} ${IOKIT_LIBRARY} ${CORE_LIBRARY})
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
+if (APPLE)
+    message("Apple build")
+    find_library(IOKIT_LIBRARY IOKit)
+    find_library(CORE_LIBRARY CoreFoundation)
 else()
-    message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
+    message("Unix build")
 endif()
+
+find_package(Boost REQUIRED COMPONENTS system filesystem thread log log_setup)
+FIND_PACKAGE(Threads)
+
+set (MAIN_LIBS ${Boost_LIBRARIES} ${IOKIT_LIBRARY} ${CORE_LIBRARY})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_INSTALL_NAME_DIR "")
