--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "lib/json"]
 	path = lib/json
-	url = https://github.com/nlohmann/json.git
+	url = git@github.com:nlohmann/json.git
 [submodule "lib/serial"]
 	path = lib/serial
-	url = https://github.com/darvik80/serial.git
+	url = git@github.com:darvik80/serial.git
 [submodule "lib/arduino"]
 	path = lib/arduino
-	url = https://github.com/darvik80/rover-arduino.git
+	url = git@github.com:darvik80/rover-arduino.git
 [submodule "lib/mqtt"]
 	path = lib/mqtt
-	url = https://github.com/darvik80/mqtt
+	url = git@github.com:darvik80/mqtt.git
