--- a/plugins/system/CMakeLists.txt
+++ b/plugins/system/CMakeLists.txt
@@ -15,6 +15,8 @@ file(GLOB SRCS_G
         )
 
 include_directories(
+        /usr/include
+        /usr/local/include
         ${PROJECT_SOURCE_DIR}/src
         ${PROJECT_SOURCE_DIR}/../../platform/src
 )
