--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,8 @@ set(CMAKE_INSTALL_NAME_DIR "")
 enable_testing()
 
 #add_subdirectory(lib/arduino)
-add_subdirectory(lib/json)
-add_subdirectory(lib/serial)
+#add_subdirectory(lib/json)
+#add_subdirectory(lib/serial)
 add_subdirectory(lib/mqtt)
 add_subdirectory(platform)
 add_subdirectory(plugins/system)
