--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -56,7 +56,7 @@ file(MAKE_DIRECTORY ${PROPERTIES_DIR})
 file(MAKE_DIRECTORY ${PLUGINS_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/settings.json DESTINATION ${PROPERTIES_DIR})
 
-message(${CMAKE_HOST_SYSTEM_PROCESSOR})
+add_definitions(-DBOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED -DDBOOST_STACKTRACE_USE_ADDR2LINE)
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES arm OR CMAKE_HOST_SYSTEM_PROCESSOR MATCHES aarch)
     message(${CMAKE_HOST_SYSTEM_PROCESSOR})
     add_definitions(-DPROFILE_GPIO)
