--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -5,10 +5,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
 file(GLOB SRCS_G
         src/*.cpp
-        src/http/*.cpp
-        src/http/json-rpc/*.cpp
-        src/properties/*.cpp
-        src/subsystem/*.cpp
+        src/module/*.cpp
+        src/module/raspberry/*.cpp
         )
 
 include_directories(
@@ -18,10 +16,10 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/../platform/src
 )
 
-find_package(nlohmann_json 3.7.0 REQUIRED)
+add_definitions(-DPROFILE_RASPBERRY)
 
 add_executable(incubator ${SRCS_G})
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
 
-target_link_libraries(incubator ${CONAN_LIBS} nlohmann_json::nlohmann_json ${CONAN_LIBS})
+target_link_libraries(incubator ${MAIN_LIBS})
