--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -3,17 +3,20 @@ project(incubator VERSION 1.0)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
-file(GLOB SRCS_G
+file(GLOB
+        SRCS_G
         src/*.cpp
         src/module/*.cpp
         src/module/raspberry/*.cpp
-        )
+        ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src/raspberry/*.cpp
+)
 
 include_directories(
         /usr/local/include
         /usr/include
         ${PROJECT_SOURCE_DIR}/src
         ${PROJECT_SOURCE_DIR}/../platform/src
+        ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src
 )
 
 add_definitions(-DPROFILE_RASPBERRY)
