fix build for esp32/arduino

--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -18,10 +18,21 @@ lib_deps = bblanchon/ArduinoJson
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-lib_deps = me-no-dev/ESPAsyncUDP
+lib_deps =
+	bblanchon/ArduinoJson @ ^6.17.3
 
 [env:esp8266]
+build_flags =
+	-DSUPPORT_ETHERNET
 platform = espressif8266
 board = huzzah
-lib_deps = me-no-dev/ESPAsyncUDP
-    bblanchon/ArduinoJson
+lib_deps = 
+	me-no-dev/ESPAsyncUDP
+	bblanchon/ArduinoJson
+
+[env:arduino]
+platform = atmelavr
+board = uno
+lib_deps = 
+	bblanchon/ArduinoJson @ ^6.17.3
+	mike-matera/ArduinoSTL @ ^1.1.0
