--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -3,12 +3,15 @@ project(incubator VERSION 1.0)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
+add_definitions(-DRASPBERRY_ARCH -DSUPPORT_ETHERNET)
+
 file(GLOB
         SRCS_G
         src/*.cpp
         src/module/*.cpp
         src/module/raspberry/*.cpp
-        ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src/raspberry/*.cpp
+        ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src/net/*.cpp
+        ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src/net/raspberry/*.cpp
 )
 
 include_directories(
@@ -18,8 +21,6 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/../platform/src
         ${PROJECT_SOURCE_DIR}/../lib/platform-io/lib/shared/src
 )
-
-add_definitions(-DPROFILE_RASPBERRY)
 
 add_executable(incubator ${SRCS_G})
 
