--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -18,17 +18,17 @@ lib_deps = bblanchon/ArduinoJson
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-lib_deps =
+lib_deps = 
 	bblanchon/ArduinoJson @ ^6.17.3
 
 [env:esp8266]
-build_flags =
-	-DSUPPORT_ETHERNET
+build_flags = -DSUPPORT_ETHERNET
 platform = espressif8266
 board = huzzah
 lib_deps = 
 	me-no-dev/ESPAsyncUDP
 	bblanchon/ArduinoJson
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
 
 [env:arduino]
 platform = atmelavr
