--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -13,13 +13,12 @@ default_envs = esp8266
 
 [env]
 framework = arduino
-lib_deps = bblanchon/ArduinoJson
+lib_deps = bblanchon/ArduinoJson @ ^6.17.3
 
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-lib_deps = 
-	bblanchon/ArduinoJson @ ^6.17.3
+lib_deps = bblanchon/ArduinoJson @ ^6.17.3
 
 [env:esp8266]
 build_flags = -DSUPPORT_ETHERNET
@@ -27,7 +26,7 @@ platform = espressif8266
 board = huzzah
 lib_deps = 
 	me-no-dev/ESPAsyncUDP
-	bblanchon/ArduinoJson
+	bblanchon/ArduinoJson @ ^6.17.3
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
 
 [env:arduino]
@@ -35,4 +34,4 @@ platform = atmelavr
 board = uno
 lib_deps = 
 	bblanchon/ArduinoJson @ ^6.17.3
-	mike-matera/ArduinoSTL @ ^1.1.0
+	etlcpp/Embedded Template Library @ ^19.3.5
