fix build for esp32/arduino

--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -13,25 +13,31 @@ default_envs = esp8266
 
 [env]
 framework = arduino
-lib_deps = bblanchon/ArduinoJson @ ^6.17.3
+build_flags = -DARDUINOJSON_ENABLE_STD_STRING=1
+lib_deps = bblanchon/ArduinoJson
 
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-lib_deps = bblanchon/ArduinoJson @ ^6.17.3
+build_flags =
+	${env.build_flags}
+lib_deps =
+	${env.lib_deps}
 
 [env:esp8266]
-build_flags = -DSUPPORT_ETHERNET
+build_flags =
+	${env.build_flags}
+	-DSUPPORT_ETHERNET
 platform = espressif8266
 board = huzzah
-lib_deps = 
+lib_deps =
+	${env.lib_deps}
 	me-no-dev/ESPAsyncUDP
-	bblanchon/ArduinoJson @ ^6.17.3
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
 
 [env:arduino]
 platform = atmelavr
 board = uno
-lib_deps = 
-	bblanchon/ArduinoJson @ ^6.17.3
-	etlcpp/Embedded Template Library @ ^19.3.5
+lib_deps =
+	${env.lib_deps}
+	etlcpp/Embedded Template Library
