--- a/incubator/resources/settings.json
+++ b/incubator/resources/settings.json
@@ -2,5 +2,15 @@
   "network": {
     "registry_host": "127.0.0.1",
     "registry_port": 54545
+  },
+  "logging": {
+    "level": "info",
+    "console": true,
+    "file": false
+  },
+  "http": {
+    "host": "0.0.0.0",
+    "port": 8080,
+    "root": "www"
   }
 }
