build for rapsbian 32

--- a/incubator/CMakeLists.txt
+++ b/incubator/CMakeLists.txt
@@ -46,7 +46,6 @@ if (APPLE)
                 set(_DESTINATION ${DESTINATION}/${_DESTINATION})
             endif ()
             set_property(SOURCE ${RESOURCE} PROPERTY MACOSX_PACKAGE_LOCATION ${_DESTINATION})
-            message(${RESOURCE})
         endforeach (RESOURCE)
         set(${VAR} ${_LIST} PARENT_SCOPE)
     endfunction()
@@ -74,8 +73,13 @@ else ()
     set(PLUGINS_DIR ${EXECUTABLE_OUTPUT_PATH}/../lib)
     set(VAR_DIR ${EXECUTABLE_OUTPUT_PATH}/../var)
 
-    set(TARGET_FORMAT "elf64-littleaarch64")
-    set(TARGET_ARCHITECTURE "aarch64")
+    if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES arm)
+        set(TARGET_FORMAT "elf32-littlearm")
+        set(TARGET_ARCHITECTURE "arm")
+    elseif(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES aarch64)
+        set(TARGET_FORMAT "elf64-littleaarch64")
+        set(TARGET_ARCHITECTURE "aarch64")
+    endif ()
 
     include(CMakeLists_linux.txt)
 
