--- a/incubator/resources/settings.json
+++ b/incubator/resources/settings.json
@@ -12,5 +12,9 @@
     "host": "0.0.0.0",
     "port": 8080,
     "root": "www"
+  },
+  "serial": {
+    "port": "/dev/tty.usbmodem14101",
+    "baud-rate": 115200
   }
 }
