--- a/incubator/resources/settings.json
+++ b/incubator/resources/settings.json
@@ -4,7 +4,7 @@
     "registry_port": 54545
   },
   "logging": {
-    "level": "info",
+    "level": "debug",
     "console": true,
     "file": false
   },
@@ -14,7 +14,7 @@
     "root": "www"
   },
   "serial": {
-    "port": "/dev/tty.usbserial-1410",
+    "port": "/dev/tty.usbmodem143301",
     "baud-rate": 115200
   }
 }
