--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -41,3 +41,6 @@ board = uno
 lib_deps =
 	${env.lib_deps}
 	etlcpp/Embedded Template Library
+	adafruit/Adafruit BusIO @ ^1.7.3
+	adafruit/Adafruit GFX Library @ ^1.10.7
+	adafruit/Adafruit SSD1306 @ ^2.4.5
