--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266
+default_envs = arduino
 
 [env]
 framework = arduino
@@ -19,25 +19,27 @@ lib_deps = bblanchon/ArduinoJson
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-build_flags =
-	${env.build_flags}
-lib_deps =
+build_flags = ${env.build_flags}
+lib_deps = 
 	${env.lib_deps}
+	arduino-libraries/Servo@^1.1.8
 
 [env:esp8266]
-build_flags =
+build_flags = 
 	${env.build_flags}
 	-DSUPPORT_ETHERNET
 platform = espressif8266
 board = huzzah
-lib_deps =
+lib_deps = 
 	${env.lib_deps}
 	me-no-dev/ESPAsyncUDP
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
+	arduino-libraries/Servo@^1.1.8
 
 [env:arduino]
 platform = atmelavr
 board = uno
-lib_deps =
+lib_deps = 
 	${env.lib_deps}
 	etlcpp/Embedded Template Library
+	arduino-libraries/Servo@^1.1.8
