--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -14,32 +14,38 @@ default_envs = arduino
 [env]
 framework = arduino
 build_flags = -DARDUINOJSON_ENABLE_STD_STRING=1
+              -DMG90S_SERVO_MOTOR
+              -DL298N_DC_MOTOR
+              -DL293D_DC_MOTOR_SHIELD
 lib_deps = bblanchon/ArduinoJson
 
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
 build_flags = ${env.build_flags}
-lib_deps = 
-	${env.lib_deps}
-	arduino-libraries/Servo@^1.1.8
+lib_deps =
+    ${env.lib_deps}
+    arduino-libraries/Servo@^1.1.8
+    curiositygym/Motor Driver Library@^1.0.0
 
 [env:esp8266]
-build_flags = 
-	${env.build_flags}
-	-DSUPPORT_ETHERNET
+build_flags =
+    ${env.build_flags}
+    -DSUPPORT_ETHERNET
 platform = espressif8266
 board = huzzah
-lib_deps = 
-	${env.lib_deps}
-	me-no-dev/ESPAsyncUDP
-	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
-	arduino-libraries/Servo@^1.1.8
+lib_deps =
+    ${env.lib_deps}
+    me-no-dev/ESPAsyncUDP
+    thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
+    arduino-libraries/Servo@^1.1.8
+    curiositygym/Motor Driver Library@^1.0.0
 
 [env:arduino]
 platform = atmelavr
 board = uno
-lib_deps = 
-	${env.lib_deps}
-	etlcpp/Embedded Template Library
-	arduino-libraries/Servo@^1.1.8
+lib_deps =
+    ${env.lib_deps}
+    etlcpp/Embedded Template Library
+    arduino-libraries/Servo@^1.1.8
+    curiositygym/Motor Driver Library@^1.0.0
