grpc support on MacOS

--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -14,6 +14,7 @@ default_envs = arduino
 [env]
 framework = arduino
 lib_deps = bblanchon/ArduinoJson
+           etlcpp/Embedded Template Library ETL
 
 [env:esp32]
 platform = espressif32
@@ -21,28 +22,34 @@ board = esp32doit-espduino
 build_flags = ${env.build_flags}
 lib_deps =
     ${env.lib_deps}
+    ottowinter/ESPAsyncTCP-esphome@^1.2.3
+    ottowinter/AsyncMqttClient-esphome@^0.8.5
 
 [env:esp8266]
 build_flags =
     ${env.build_flags}
     -DSUPPORT_ETHERNET
+    -DMG90S_SERVO_MOTOR
+    -DL298N_DC_MOTOR
 platform = espressif8266
-board = huzzah
+board = d1_mini
 lib_deps =
     ${env.lib_deps}
-    me-no-dev/ESPAsyncUDP
     thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.0
+    ottowinter/ESPAsyncTCP-esphome@^1.2.3
+    me-no-dev/ESPAsyncUDP
+    ottowinter/AsyncMqttClient-esphome@^0.8.5
 
 [env:arduino]
 platform = atmelavr
 board = uno
-build_flags = -DARDUINOJSON_ENABLE_STD_STRING=1
-              -DMG90S_SERVO_MOTOR
-              -DL293D_DC_MOTOR_SHIELD
-              -DHX1838_IR_REMOTE
+build_flags =
+    -DARDUINOJSON_ENABLE_STD_STRING=1
+    -DMG90S_SERVO_MOTOR
+    -DL293D_DC_MOTOR_SHIELD
+    -DHX1838_IR_REMOTE
 lib_deps =
     ${env.lib_deps}
-    etlcpp/Embedded Template Library
     arduino-libraries/Servo@^1.1.8
     curiositygym/Motor Driver Library@^1.0.0
     seeed-studio/IRremote@^2.6.1
