--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -5,6 +5,38 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fvisibility=hidden")
 
 add_definitions(-DRASPBERRY_ARCH -DSUPPORT_ETHERNET)
 
+# OpenSSL
+set(OPENSSL_ROOT_DIR /usr/local/Cellar/openssl@1.1/1.1.1k)
+find_package(OpenSSL REQUIRED)
+
+### proto build {
+find_package(Protobuf REQUIRED)
+find_package(gRPC CONFIG REQUIRED)
+include_directories(${Protobuf_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
+get_target_property(gRPC_CPP_PLUGIN_EXECUTABLE gRPC::grpc_cpp_plugin IMPORTED_LOCATION_RELEASE)
+
+
+get_filename_component(PROTO "${PROJECT_SOURCE_DIR}/proto/helloworld.proto" ABSOLUTE)
+get_filename_component(PROTO_PATH "${PROTO}" PATH)
+
+# Generated sources
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO})
+set(GRPC_SRCS "${CMAKE_CURRENT_BINARY_DIR}/helloworld.grpc.pb.cc")
+set(GRPC_HDRS "${CMAKE_CURRENT_BINARY_DIR}/helloworld.grpc.pb.h")
+add_custom_command(
+        OUTPUT "${GRPC_SRCS}" "${GRPC_HDRS}"
+        COMMAND protobuf::protoc
+        ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}" -I "${PROTO_PATH}"
+        --plugin=protoc-gen-grpc="${gRPC_CPP_PLUGIN_EXECUTABLE}"
+        "${PROTO}"
+        DEPENDS "${PROTO}")
+
+include_directories("${CMAKE_CURRENT_BINARY_DIR}")
+### } proto build
+
+
 file(GLOB SRCS_G
         src/*.cpp
         src/logging/*.cpp
@@ -19,6 +51,7 @@ file(GLOB SRCS_G
         src/serial/*.cpp
         src/serial/os/*.cc
         src/scheduler/*.cpp
+        src/grpc/*.cpp
         )
 
 include_directories(
@@ -68,7 +101,7 @@ if (APPLE)
             src/resources/ResourceManager_apple.cpp
             )
 
-    add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRCS_G} ${SRCS_OS} ${RESOURCES_G})
+    add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRCS_G} ${SRCS_OS} ${RESOURCES_G} ${PROTO_SRCS} ${GRPC_SRCS})
 else ()
     set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
     set(PROPERTIES_DIR ${EXECUTABLE_OUTPUT_PATH}/../etc)
@@ -93,4 +126,4 @@ endif ()
 
 add_subdirectory(testsuite)
 
-target_link_libraries(${PROJECT_NAME} ${MAIN_LIBS})
+target_link_libraries(${PROJECT_NAME} ${MAIN_LIBS} protobuf::libprotobuf gRPC::grpc++)
