--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -19,12 +19,13 @@ lib_deps = bblanchon/ArduinoJson
 [env:esp32]
 platform = espressif32
 board = esp32doit-espduino
-build_flags =
+build_flags = 
 	${env.build_flags}
 	-DMQTT_SUPPORT
-upload_port=/dev/cu.usbserial-0001
-lib_deps =
+upload_port = /dev/cu.usbserial-0001
+lib_deps = 
 	${env.lib_deps}
+	arduino-libraries/WiFi
 	ottowinter/AsyncMqttClient-esphome@^0.8.5
 
 [env:esp8266]
@@ -32,11 +33,12 @@ build_flags =
 	${env.build_flags}
 	-DSUPPORT_ETHERNET
 	-DMG90S_SERVO_MOTOR
-	-DL298N_DC_MOTOR
 platform = espressif8266
 board = d1_mini
 lib_deps = 
 	${env.lib_deps}
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	me-no-dev/ESPAsyncUDP
 	ottowinter/AsyncMqttClient-esphome@^0.8.5
 
 [env:arduino]
