motor for esp8266

--- a/lib/platform-io/platformio.ini
+++ b/lib/platform-io/platformio.ini
@@ -32,6 +32,7 @@ lib_deps =
 build_flags = 
 	${env.build_flags}
 	-DSUPPORT_ETHERNET
+	-DL293D_DC_MOTOR_SHIELD
 	-DMG90S_SERVO_MOTOR
 platform = espressif8266
 board = d1_mini
@@ -52,6 +53,5 @@ build_flags =
 lib_deps = 
 	${env.lib_deps}
 	arduino-libraries/Servo@^1.1.8
-	curiositygym/Motor Driver Library@^1.0.0
 	seeed-studio/IRremote@^2.6.1
 	ottowinter/AsyncMqttClient-esphome@^0.8.5
