--- a/service/resources/settings.json
+++ b/service/resources/settings.json
@@ -13,7 +13,7 @@
     "host": "0.0.0.0"
   },
   "logging": {
-    "level": "debug",
+    "level": "info",
     "console": true,
     "file": false
   },
