logger system for ESP

--- a/platform-io/platformio.ini
+++ b/platform-io/platformio.ini
@@ -13,8 +13,13 @@ default_envs = esp8266
 
 [env]
 framework = arduino
-lib_deps = bblanchon/ArduinoJson
-           etlcpp/Embedded Template Library ETL
+monitor_speed=115200
+#monitor_filter=colorize
+monitor_flags=--raw
+lib_deps =
+    bblanchon/ArduinoJson
+    etlcpp/Embedded Template Library ETL
+    werediver/fmt@^8.0.1
 
 [env:esp32]
 platform = espressif32
@@ -23,10 +28,9 @@ build_flags =
     ${env.build_flags}
     -DSUPPORT_ETHERNET
     -DMQTT_SUPPORT
-upload_port = /dev/cu.usbserial-0001
+#upload_port = /dev/cu.usbserial-0001
 lib_deps =
     ${env.lib_deps}
-    arduino-libraries/WiFi
     ottowinter/AsyncMqttClient-esphome@^0.8.5
 
 [env:esp8266]
